force-app/main/default/objects/cgc_sync__Sync_Named_Query__c/cgc_sync__Sync_Named_Query__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores a SOQL query that is designed to be included by another query, via a special syntax that differentiates it from the Standard SOQL bindings.</description>
    <label>Named Query</label>
</CustomObject>