force-app/main/default/objects/cgc_sync__Sync_Named_Query__c/fields/cgc_sync__Bindable_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Bindable_Name__c</fullName>
    <description>The Bindable Name is used to refer the Named Query in other Named Queries or Tracked Objects.
In the following example, the &quot;accountIdsOfUser&quot; string is the bindable name of a named query.

SELECT * From Account WHERE Id IN ::accountIdsOfUser::</description>
    <inlineHelpText>The Bindable Name is used to refer the Named Query in other Named Queries or Tracked Objects.</inlineHelpText>
    <label>Bindable Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>