force-app/main/default/objects/cgc_sync__Sync_Named_Query__c/fields/cgc_sync__SOQL_Statement3__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__SOQL_Statement3__c</fullName>
    <description>The 3rd part of the SOQL statement when it exceeds 255 characters.</description>
    <inlineHelpText>The SOQL statement that will be executed when the named query is referenced by another query.</inlineHelpText>
    <label>SOQL_Statement3</label>
    <type>TextArea</type>
</CustomField>