force-app/main/default/objects/cgc_sync__Sync_Named_Query__c/fields/cgc_sync__Type__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Type__c</fullName>
    <description>Type of Named Query (Contains values Distribution or Multi Channel).</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>